modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-service-types/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedServiceTypes
metadata:
  name: security-policy
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Service"]
  parameters:
    allowedServiceTypes:
    - ClusterIP
