modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-service-types/rendered/test_samples/pods/003-003-disallowed-nodeport.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Service
metadata:
    name: my-service
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    ports:
        - port: 80
          protocol: TCP
          targetPort: 9376
    selector:
        app: MyApp
    type: NodePort
