modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-service-types/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-volume-types
tests:
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 001-allowed_clusterip
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-allowed-clusterip.yaml
        assertions:
          - violations: "no"
      - name: 002-disallowed_loadbalancer
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-002-disallowed-loadbalancer.yaml
        assertions:
          - violations: "yes"
      - name: 003-disallowed_nodeport
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-003-disallowed-nodeport.yaml
        assertions:
          - violations: "yes"
      - name: 004-allowed_default_clusterip
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-004-allowed-default-clusterip.yaml
        assertions:
          - violations: "no"
